--- a/DEP Tasks/Trainers Task/3D-ChessBoard/assets/styles.css
+++ b/DEP Tasks/Trainers Task/3D-ChessBoard/assets/styles.css
@@ -1,70 +1,106 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: #ddd;
+  margin: 0;
+  padding: 0;
+  background: rgb(247, 245, 245);
+}
+
+.text {
+    position: absolute;
+    top: 15%; 
+    right: 50%;
+    transform: translate(50%,-50%);
+    text-transform: uppercase;
+    font-family: verdana;
+    font-size: 5rem;
+    font-weight: 500;
+    color: #f5f5f5;
+    text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191,
+        1px 10px 1px #919191,
+    1px 18px 6px rgba(16,16,16,0.4),
+    1px 22px 10px rgba(16,16,16,0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
 }
 
 .board {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-30deg) skew(25deg);
-    width: 480px;
-    height: 480px;
-    transition: 0.5s;
-    background-color: #000;
-    box-shadow: -20px 20px 20px rbga(0, 0, 0, .5);
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-30deg) skew(25deg);
+  width: 480px;
+  height: 480px;
+  transition: 0.5s;
+  background-color: #000;
+  -webkit-box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
+  -moz-box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
+  box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
+}
+
+.board:hover {
+  top: 55%;
+  -webkit-box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
+  -moz-box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
+  box-shadow: -47px 49px 5px 0px rgba(107, 105, 107, 1);
 }
 
 .board span {
-    width: 480px;
-    height: 60px;
-    display: block;
+  width: 480px;
+  height: 60px;
+  display: block;
 }
 
 .board span:nth-child(odd) {
-    background: linear-gradient(90deg, #f1f1f1 0%, #f1f1f1 50%, #333 50%, #333 100%);
-    background-size: 120px;
+  background: linear-gradient(
+    90deg,
+    #f1f1f1 0%,
+    #f1f1f1 50%,
+    #333 50%,
+    #333 100%
+  );
+  background-size: 120px;
 }
 
 .board span:nth-child(even) {
-    background: linear-gradient(90deg, #333 0%, #333 50%, #f1f1f1 50%, #f1f1f1 100%);
-    background-size: 120px;
+  background: linear-gradient(
+    90deg,
+    #333 0%,
+    #333 50%,
+    #f1f1f1 50%,
+    #f1f1f1 100%
+  );
+  background-size: 120px;
 }
 
 .board::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background: linear-gradient(180deg, #f1f1f1 0%, #f1f1f1 50%, #333 50%, #333 100%);
-    background-size: 5px;
-    transform: rotate(0deg), skewY(-45deg);
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: -20px;
+  height: 100%;
+  width: 20px;
+  background: linear-gradient(180deg, #fff 0%, #fff 50%, #000 50%, #000 100%);
+  background-size: 5px;
+  transform: skewY(-45deg);
 }
 
-
-/* .board:before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background: linear-gradient(180deg, #fff 0%, #fff 50%, #000 50%, #000 100%);
-    background-size: 5px;
-    transform: rotate(0deg) skewY(-45deg);
+.board::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: -10px;
+  height: 20px;
+  width: 100%;
+  background: linear-gradient(90deg, #000 0%, #000 50%, #fff 50%, #fff 100%);
+  background-size: 120px;
+  transform: skewX(-45deg);
 }
 
-.board:after {
-    content: '';
-    position: absolute;
-    bottom: -20px;
-    left: -10px;
-    height: 20px;
-    width: 100%;
-    background: linear-gradient(90deg, #000 0%, #000 50%, #fff 50%, #fff 100%);
-    background-size: 5px;
-    transform: rotate(0deg) skewX(-45deg);
-} */
+ 
